--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -28,8 +28,8 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição!!</p>
     <script>
-        var nome = window.prompt('qual é o seu nome ?') //janela de incitar 
-        window.alert('Muito prazer em te conhecer, '+ nome + ' !') // sinal de + ultiliado para concatenar.
+        var nome = window.prompt("qual é o seu nome?")
+        window.alert(`Boa tarde ${nome} tudo bem ${nome}`)
     </script>
 </body>
 </html>
